--- a/dannygraphic.css
+++ b/dannygraphic.css
@@ -1,15 +1,23 @@
 body{
-  font-size: 20px;
   font-family: Georgia;
-   padding-left: 5px;
+     background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url('dgl2.jpg'); 
+  }
+footer, header, section{
+  padding-left: 5px;
     padding-right:5px ;
-  
+margin-left:0px ;
+margin-right: 0px;
+font-size:25px;
 }
- #service, .portfolio ,.testimonials, .contact{
+main, header{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url('dgl4.jpg'); 
+  background-image: url('dgl6.jpeg'); 
+  margin-top:15px;
 }
 #logo{
   float: right;
@@ -20,6 +28,7 @@ body{
 }
 header{
   border-bottom:2px solid #4a0a0ac5;
+  height: 200px;
 }
 img{
   width:100%;
@@ -32,19 +41,21 @@ h1 ,h2 ,h3, h4{
   text-decoration: ;
   font-size: 35px;
 }
+p{
+  margin-left:10px ;
+margin-right: 10px;
+
+}
 b {
   color: #4a0a0ac5;
-  font-size: 22px;
+  font-size: 30px;
 }
-/*Desk-top site*/
-@media(min-width:750px){
-  /*#logo{
-    width:20%;
-  height: 110px;
-}*/
-header{
-  height: 200px;
+body{
+  position: relative;
+  left:0%;
+  right:0%;
 }
+
 article{
     display: flex;
   }
@@ -53,34 +64,73 @@ article{
   }
   #p1, #p2, #p3{
     width:100px;
-    height: 100px;
+    height: 100px;:
   }
   #a p{
-    padding-left: 7%;
-    padding-right:7% ;
+    padding-left: 1%;
+    padding-right:1% ;
     padding-top:5px ;
   }
   #b p{
-    padding-left: 10%;
-    padding-right:10% ;
+    padding-left: 3%;
+    padding-right:3% ;
     padding-top:5px ;
   }
+footer, footer h2, a{
+  color:#ffffffe2;
+}
+footer article{
+  display:flex;
+}
+footer img{
+  width: 30px;
+  height: 40px;
+  display: inline;
 }
 /*phone view*/
 @media(max-width:750px){
+  footer, header, section{
+    font-size: 18px;
+  }
+  header{
+    height: 220px;
+  }
 #p1, #p2, #p3{
     float: left;
     width:100px;
     height: 100px;
   }
-  .contact{
-    display: flex;
-  } 
-  .contact h2  {
-    display: inline-block;
+   #a p{
+    padding-left:2px ;
+    padding-right:2px;
   }
-   #a p, #b p{
-    padding-left: 5px;
-    padding-right:5px ;
+  #b p{
+    padding-left: 2px;
+    padding-right:2px;
+  }
+
+  .contact  article{
+    display: block;
+  }
+  #service{
+    height: 400px;
+  }
+  .portfolio{
+    height: 580px;
+  }
+  .testimonials{
+    height: 480px;
   }
 }
+/*Desk-top site*/
+@media(min-width:750px){
+  #service{
+    height: 400px;
+  }
+  .portfolio{
+    height: 780px;
+  }
+  .testimonials{
+    height: 500px;
+  }
+    }
