--- a/style.css
+++ b/style.css
@@ -110,10 +110,12 @@ body{
 }
 #Portfolio .pic, #Portfolio .pics{
   width:80%;
+  height:200px;
+  display: block;
 }
 #Portfolio img{
   width:100%;
-  height:200px;
+  height:100%;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #120d29;
 }
