--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ blockquote{
   border-radius:5px;
 }
  #Testimonial img{
-  width: 150px;
+  width: 100px;
   margin:5px 0px;
   border-radius: 5px;
 }
@@ -187,6 +187,9 @@ footer{
 }
 /* Desktop */
 @media(min-width:750px){
+*{
+ width:100%;
+}
   .top_logo{
   width:120px;
   float:left;
