--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 *{
   margin:0 auto;
   padding: 0 auto;
-  font-size:1em;
 }
 body{
   background: #f2f2f2;
@@ -226,7 +225,9 @@ font-size:0.5em;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #120d29;
 }
-
+#Portfolio{
+ height: 600px;
+}
 #Services article, #Portfolio article, #Testimonial li{
   margin: 20px 50px;
 }
