--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ flex:2;
   border-radius: 10px;
   box-shadow: 0px 0px 30px #120d29;
 }
-#Portfolio, #Services, #Testimonial{
+#Portfolio, #Services, #Testimonial, .top{
  font-size: 8px;
 }
 #Portfolio article{
