--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* Both */
+/* Both *//*
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
-
+*/
 *{
   margin:0 auto;
   padding: 0 auto;
@@ -8,7 +8,7 @@
 body{
   background: #f2f2f2;
   font-size: 1em;
-  font-family: Montserrat, San-serif;
+  font-family: Roboto;
 }
 
 .top{
